# ocfassistant

./: .env.template  .gitignore  README.md  chat.py  chunking.py  config.yml  embeddings.py  main.py  pyproject.toml  qdrant.py  run.sh  scrape.py  utils.py
data/: url_graph.json
data/chat.ocf.berkeley.edu-a649a3/: content.html  metadata.json
data/decal.ocf.berkeley.edu-16152a/: content.html  content.txt  metadata.json
data/github.com.ocf.ocfweb-88a564/: content.html  content.txt  metadata.json
data/github.com.ocf.ocfweb.commits.master.ocfweb.docs.d-0a652e/: content.html  content.txt  metadata.json
data/github.com.ocf.ocfweb.commits.master.ocfweb.docs.d-142623/: content.html  content.txt  metadata.json
data/github.com.ocf.ocfweb.commits.master.ocfweb.docs.d-20717c/: content.html  content.txt  metadata.json
data/github.com.ocf.ocfweb.commits.master.ocfweb.docs.d-27c8c6/: content.html  content.txt  metadata.json
data/github.com.ocf.ocfweb.commits.master.ocfweb.docs.d-452ab2/: content.html  content.txt  metadata.json
data/github.com.ocf.ocfweb.commits.master.ocfweb.docs.d-51674f/: content.html  content.txt  metadata.json
data/github.com.ocf.ocfweb.commits.master.ocfweb.docs.d-5269af/: content.html  content.txt  metadata.json
data/github.com.ocf.ocfweb.commits.master.ocfweb.docs.d-5f42b3/: content.html  content.txt  metadata.json
data/github.com.ocf.ocfweb.commits.master.ocfweb.docs.d-8a107c/: content.html  content.txt  metadata.json
data/github.com.ocf.ocfweb.commits.master.ocfweb.docs.d-ac7db2/: content.html  content.txt  (+1 more)
templates/: index.html
(+3261 files in other folders)
